[package]
name = "flowforge"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum_tonic = "0.2.0"
clap = { version = "4.5.15", features = ["derive"] }
sqlx = { version = "0.8.0", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
